# 3DDFA_V2

./: .gitignore  LICENSE  Pipfile  TDDFA.py  TDDFA_ONNX.py  build.ps1  build.sh  buildOnWindows.md  demo.ipynb  demo.py  demo_video.py  demo_video_smooth.py  demo_webcam_smooth.py  gradiodemo.py  latency.py  readme.md  requirements.txt  speed_cpu.py
.github/ISSUE_TEMPLATE/: bug_report.md
FaceBoxes/: .gitignore  FaceBoxes.py  FaceBoxes_ONNX.py  __init__.py  build_cpu_nms.sh  onnx.py  readme.md
FaceBoxes/models/: faceboxes.py
FaceBoxes/utils/: .gitignore  box_utils.py  build.py  config.py  functions.py  nms_wrapper.py  prior_box.py  timer.py
FaceBoxes/utils/nms/: cpu_nms.c  cpu_nms.pyx
FaceBoxes/weights/: FaceBoxesProd.pth  readme.md
Sim3DR/: .gitignore  Sim3DR.py  __init__.py  _init_paths.py  build_sim3dr.sh  lighting.py  readme.md  setup.py
Sim3DR/lib/: rasterize.h  rasterize.pyx  rasterize_kernel.cpp
Sim3DR/tests/: CMakeLists.txt  io.cpp  io.h  test.cpp
bfm/: __init__.py  bfm.py  bfm_onnx.py  readme.md
configs/: .gitignore  BFM_UV.mat  indices.npy  mb05_120x120.yml  mb1_120x120.yml  ncc_code.npy  param_mean_std_62d_120x120.pkl  readme.md  resnet_120x120.yml  tri.pkl
examples/inputs/videos/: .gitignore
examples/results/: .gitignore
gradio/: demo.py
models/: __init__.py  mobilenet_v1.py  mobilenet_v3.py  resnet.py
utils/: depth.py  functions.py  io.py  onnx.py  pncc.py  pose.py  render.py  render_ctypes.py  serialization.py  tddfa_util.py  uv.py
utils/asset/: build_render_ctypes.sh  render.c
weights/: .gitignore  mb05_120x120.pth  readme.md
(+9 files in other folders)
